--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^2.30.3",
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.0.1",
     "next": "11.1.1",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "prisma": "^3.14.0"
   }
 }
